# monoreg

./: DESCRIPTION  MD5  NAMESPACE  configure  configure.ac
R/: monoreg.R  zzz.R
data/: risks.RData
man/: getcmat.Rd  monoreg.Rd  monosurv.Rd  ordmonoreg.Rd  risks.Rd
src/: Makevars.in  Makevars.win  mylib.c  mylib.h  ordsampler.c  propadjust.c  propadjust.h  sampler.c
